crea footer y header

--- a/src/styles/components/Footer.module.scss
+++ b/src/styles/components/Footer.module.scss
@@ -1,4 +1,12 @@
-.Footer {
+.footer{
   display: flex;
-  justify-content: space-between;
+  background-color: #97c940;
+  margin: 0;
+  margin-bottom: 0;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+  font-size: 1em;
+  font-weight: lighter;
 }
