--- a/src/styles/components/Layout.module.scss
+++ b/src/styles/components/Layout.module.scss
@@ -1,15 +1,5 @@
 @import "../lib/mixins.module";
 
-// section {
-//   @include max-width;  
-// }
-
-// body {
-//   @include max-width;  
-// }
-
 .Main {
-  min-height: calc(100vh - 100px - 165px);  // 100vh Navbar Footer
-  // display: flex;
-  // align-items: center;
+  min-height: calc(100vh - 79px - 165px);  
 }
